Make BattOr agent properly handle EOF

The BattOr agent didn't handle an EOF as input (CTRL-D) and it would go into an infinite loop
printing the agent's usage when it received EOF. This fix is needed because it is impossible to
script the BattOr agent when it doesn't exit on EOF.

BUG=612949

Review-Url: https://codereview.chromium.org/1994783002
Cr-Commit-Position: refs/heads/master@{#394778}

Former-commit-id: fd630bed0f920d344d94349b11201183bf025eaa